# ship

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  BLOG.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  SPEC.md  blog.md  example_claude_code.py  example_codex_cli.py  onepager.html  onepager.md  pyproject.toml
demiurg/: __main__.py  claude_code.py  config.py  planner.py  skills.py  state.py  test_planner.py  types_.py  worker.py
examples/: README.md  cli-tool.txt  fastapi-server.txt  hello-world.txt  test-design.txt
examples/advanced/: README.md
examples/simple/: README.md  SPEC.md
ship/: __main__.py  claude_code.py  codex_cli.py  config.py  display.py  judge.py  plan.py  planner.py  prompts.py  refiner.py  replanner.py  skills.py  state.py  test_planner.py  test_smoke.py  types_.py  validator.py  worker.py
