[project]
name = "ship"
version = "0.6.4"
description = "unattended harness for coding agents"
readme = "README.md"
requires-python = ">=3.14"
license = {text = "MIT"}
keywords = ["ai", "agent", "automation", "claude", "coding-agent", "llm"]
authors = [{name = "kronael"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "python-dotenv>=1.0.0",
    "click>=8.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pyright>=1.1.0",
    "pre-commit>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/kronael/ship"
Documentation = "https://github.com/kronael/ship#readme"
Repository = "https://github.com/kronael/ship"
Issues = "https://github.com/kronael/ship/issues"

[project.scripts]
ship = "ship.__main__:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
markers = ["smoke: integration tests hitting real APIs"]
addopts = "-m 'not smoke'"
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["ship"]
